<resources>
    <string name="app_name">AudioPlayerInternet</string>
    <string name="stream">Поток</string>
    <string name="uri">Интернет</string>
    <string name="raw">Память устройства</string>
    <string name="pause">ПАУЗА</string>
    <string name="resume">ВОСПРОИЗВЕДЕНИЕ</string>
    <string name="stop">СТОП</string>
    <string name="info">ИНФОРМАЦИЯ</string>
    <string name="source">ИСТОЧНИК</string>
    <string name="toast">Запущен поток аудио</string>
</resources>