<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="ПРИЛОЖЕНИЕ ПЛЕЕР"
        android:textColor="#047DA3"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textOut"
        android:layout_width="380dp"
        android:layout_height="140dp"
        android:layout_marginTop="30dp"
        android:background="#DDF6F5"
        android:gravity="center"
        android:hint="Название мелодии"
        android:textColor="#047DA3"
        android:textColorHint="#047DA3"
        android:textSize="19sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textOut">

        <Button
            android:id="@+id/btnResume"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#7FFAEF"
            android:padding="14dp"
            android:textColor="#047DA3"
            android:onClick="onClick"
            android:text="@string/resume" />

        <Button
            android:id="@+id/btnPause"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#7FFAEF"
            android:padding="14dp"
            android:textColor="#047DA3"
            android:onClick="onClick"
            android:text="@string/pause" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#7FFAEF"
            android:padding="14dp"
            android:textColor="#047DA3"
            android:onClick="onClick"
            android:text="@string/stop" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/source"
        android:textColor="#047DA3"
        android:textSize="19sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <Button
            android:id="@+id/btnStream"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:backgroundTint="#7FFAEF"
            android:text="@string/uri"
            android:onClick="onClickSource"
            android:textColor="#047DA3"
            android:textSize="14sp"
            android:textStyle="italic" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>